--- a/OMPWebApp/OMPWebApp.csproj
+++ b/OMPWebApp/OMPWebApp.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="8.0.18" />
+    <PackageReference Include="QuestPDF" Version="2025.7.0" />
     <PackageReference Include="Radzen.Blazor" Version="5.6.13" />
   </ItemGroup>
 
